new proj/src/objects/GE_AL_Equipment_Data__c.object
<CustomObject>
    <fields>
        <fullName>GE_AL_RGS_Serial_Number__c</fullName>
        <label>RGS Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ratio__c</fullName>
        <formula>GE_AL_Transformer_Tap_Volts__c / 480</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Reason_for_Install__c</fullName>
        <label>Reason for Install</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Receiver_Number__c</fullName>
        <label>Receiver Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Receiver__c</fullName>
        <label>Receiver</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Record_Number__c</fullName>
        <description>Test Record Number</description>
        <label>Record Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Reel_Number__c</fullName>
        <label>Reel Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Replace_Rear__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Replace Rear</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Restart_Time__c</fullName>
        <label>Restart Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Rig_Company_Operator__c</fullName>
        <label>Rig Company Operator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Rig_Number__c</fullName>
        <label>Rig Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Rotation__c</fullName>
        <label>Rotation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Run_Days__c</fullName>
        <label>Run Days</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Running_Amps_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Running Amps (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Running_Amps_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Running Amps (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Running_Amps_C__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Running Amps (C)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Running_Hertz_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Running Hertz (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Running_Hertz_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Running Hertz (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Running_Hertz_C__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Running Hertz (C)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_SE_Corner__c</fullName>
        <label>SE Corner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_STGS_HSG__c</fullName>
        <label>STGS / HSG</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_SWBD_Controller_Type__c</fullName>
        <label>SWBD Controller Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_SWBD_VSD_Serial__c</fullName>
        <label>SWBD/VSD Serial #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_SWBD_VSD_Type__c</fullName>
        <label>SWBD/VSD Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_SW_Corner__c</fullName>
        <label>SW Corner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Screen_1__c</fullName>
        <label>Screen (1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Screen_2__c</fullName>
        <label>Screen (2)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Screen_3__c</fullName>
        <label>Screen (3)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Seal_Serial_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seal Serial # (1)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Seal Serial # (1))</relationshipLabel>
        <relationshipName>Equipment_DataFDHR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Seal_Serial_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seal Serial # (2)</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Seal Serial # (2))</relationshipLabel>
        <relationshipName>Equipment_DataFDHv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Seal_Test_Number__c</fullName>
        <label>Seal Test Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Seat_Nipple_Length__c</fullName>
        <label>Seat Nipple Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Seat_Nipple_Setting__c</fullName>
        <label>Seat Nipple Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Seat_Nipple_Size__c</fullName>
        <label>Seat Nipple Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Secondary_Surge_Suppressor__c</fullName>
        <label>Secondary Surge Suppressor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Sensor_Display__c</fullName>
        <label>Sensor Display #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Set_Current__c</fullName>
        <label>Set Current</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Set_Hz__c</fullName>
        <label>Set Hz</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Setting_Depth__c</fullName>
        <label>Setting Depth</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Shipper__c</fullName>
        <label>Shipper #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Shroud__c</fullName>
        <label>Shroud</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Spooler_Company_Operator__c</fullName>
        <label>Spooler Company/Operator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Start_Amps_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Start Amps (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Start_Amps_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Start Amps (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Start_Amps_C__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Start Amps (C)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Static_DH_Pressure__c</fullName>
        <label>Static DH Pressure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Static_PSI__c</fullName>
        <label>Static PSI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Static_Temp_1__c</fullName>
        <label>Static Temp (1)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Static_Temp_2__c</fullName>
        <label>Static Temp (2)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Step_Up_XFMR_Serial__c</fullName>
        <label>Step Up XFMR Serial #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Strait_Out_from_Well_Head__c</fullName>
        <label>Strait Out from Well Head</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Sub_Size__c</fullName>
        <label>Sub Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Suction_Pressure__c</fullName>
        <label>Suction Pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Suction_Size__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Suction Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Suction__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Suction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Surf_Volts_at_60_Hz__c</fullName>
        <formula>( GE_AL_Surf_Volts_at_Max_Hz__c /  VALUE(GE_AL_Max_Hz__c) ) * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Surface Volts @ 60 Hz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Surf_Volts_at_Max_Hz__c</fullName>
        <formula>((( GE_AL_Mtr_Nameplate__c / 60 ) *  VALUE( GE_AL_Max_Hz__c )) +  GE_AL_Cable_Loss__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Surface Volts @ Max Hz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tag_number__c</fullName>
        <label>Tag #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tank_Level_ft__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Tank Level(ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tap_Settings__c</fullName>
        <label>Tap Settings</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Temperature_F__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Temperature F</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Test_Time__c</fullName>
        <label>Test Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Thrust_Chamber_Condition__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Thrust Chamber Condition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Thrust_Chamber_Serviced__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Thrust Chamber Serviced</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Timer_Restart__c</fullName>
        <label>Timer Restart</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Top_Chamber_Drained_1__c</fullName>
        <label>Top Chamber Drained (1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Top_Chamber_Drained_2__c</fullName>
        <label>Top Chamber Drained (2)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Top_of_Liner_at__c</fullName>
        <label>Top of Liner at</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Total_Bands__c</fullName>
        <formula>GE_AL_of_Bands_to_MLC__c  +  GE_AL_Bands_Below_TBG_HGR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Total_Well_Depth_ft__c</fullName>
        <label>Total Well Depth (ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_Ratio__c</fullName>
        <label>Transformer Ratio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_Tap_Volts__c</fullName>
        <label>Transformer Tap Volts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tubing_Condition__c</fullName>
        <label>Tubing Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tubing_Kill__c</fullName>
        <label>Tubing Kill</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tubing_Length__c</fullName>
        <label>Tubing Length (ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tubing_Pressure__c</fullName>
        <label>Tubing Pressure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Tubing_Size_THD__c</fullName>
        <label>Tubing Size &amp; THD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_UL_Setting_Delay__c</fullName>
        <label>UL Setting/Delay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_UL_s_Run_Delay__c</fullName>
        <label>UL&apos;s Run Delay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_UL_s_Start__c</fullName>
        <label>UL&apos;s Start</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Underload_Delay__c</fullName>
        <label>Underload Delay</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Underload_Setting__c</fullName>
        <label>Underload Setting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Upper_Pigtail_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upper Pigtail Serial #</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Equipment Data (Upper Pigtail Serial #)</relationshipLabel>
        <relationshipName>Equipment_DataFDJm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Loaded_Amps__c</fullName>
        <label>VSD Loaded Amps</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Rotation__c</fullName>
        <label>VSD Rotation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Start_Up_Amps__c</fullName>
        <label>VSD Start-Up Amps</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Trailer_number__c</fullName>
        <label>VSD Trailer #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_V_over_Hz_at_60_Hz__c</fullName>
        <formula>GE_AL_Surf_Volts_at_60_Hz__c /  GE_AL_Ratio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V / Hz @ 60 Hz</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Vertical_Angularity_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Vertical Angularity (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Vertical_Angularity_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Vertical Angularity (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Vertical_Offset_A__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Vertical Offset (A)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Vertical_Offset_B__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>Vertical Offset (B)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_Load_A_B__c</fullName>
        <label>Volt Load A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_Load_A_C__c</fullName>
        <label>Volt Load A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_Load_A_GRND__c</fullName>
        <label>Volt Load A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_Load_B_C__c</fullName>
        <label>Volt Load B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_Load_B_GRND__c</fullName>
        <label>Volt Load B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_Load_C_GRND__c</fullName>
        <label>Volt Load C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_No_Load_A_B__c</fullName>
        <label>Volt No Load A-B</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_No_Load_A_C__c</fullName>
        <label>Volt No Load A-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_No_Load_A_GRND__c</fullName>
        <label>Volt No Load A-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_No_Load_B_C__c</fullName>
        <label>Volt No Load B-C</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_No_Load_B_GRND__c</fullName>
        <label>Volt No Load B-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volt_No_Load_C_GRND__c</fullName>
        <label>Volt No Load C-GRND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volts_Amps_KVA__c</fullName>
        <label>Volts/Amps/KVA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volts__c</fullName>
        <label>Volts</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Volts_per_1000ft_of_Cable__c</fullName>
        <label>Volts per 1000&apos; of Cable</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water_1__c</fullName>
        <label>Water (1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water_2__c</fullName>
        <label>Water (2)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water_Down_Hole__c</fullName>
        <label>Water (Down Hole)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water_Motor_1__c</fullName>
        <label>Water (Motor 1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water_Motor_2__c</fullName>
        <label>Water (Motor 2)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water_Motor_3__c</fullName>
        <label>Water (Motor 3)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Water__c</fullName>
        <label>Water</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Weather_Conditions__c</fullName>
        <label>Weather Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Well_Head_Length__c</fullName>
        <label>Well Head Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Well_Head_Size__c</fullName>
        <label>Well Head Size</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Well_Head_Size_and_Type__c</fullName>
        <label>Well Head Size and Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Well_Head_Type_Size__c</fullName>
        <label>Well Head Type/Size</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Well_ID__c</fullName>
        <label>Well ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Well_Type__c</fullName>
        <label>Well Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Winding_Temp__c</fullName>
        <label>Winding Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Equipment Data</relationshipLabel>
        <relationshipName>Equipment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Wye__c</fullName>
        <label>Wye</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X10_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>10 - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X10_2X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>10 - 2X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X10_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>10 - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X11_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>11 - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X11_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>11 - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X12_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>12 - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X1_2__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Motor Resistance</inlineHelpText>
        <label>1-2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X1_GND__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Motor Resistance</inlineHelpText>
        <label>1-GND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X2_3__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Motor Resistance</inlineHelpText>
        <label>2-3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X2_GND__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Motor Resistance</inlineHelpText>
        <label>2-GND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X3_4__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Motor Resistance</inlineHelpText>
        <label>3-4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X3_GND__c</fullName>
        <description>SPS Installation and Service</description>
        <inlineHelpText>Motor Resistance</inlineHelpText>
        <label>3-GND</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X3a_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>3a* - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X3a_2X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>3a* - 2X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X3a_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>3a* - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9a_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9a* - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9a_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9a* - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9b_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9b* - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9b_2X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9b* - 2X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9b_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9b* - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9c_1X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9c* - 1X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9c_2X_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9c* - 2X(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X9c_Over_All_in_Sec__c</fullName>
        <description>Used in SPS Installation &amp; Service Report</description>
        <label>9c* - Over All(in/Sec)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_i_Limit__c</fullName>
        <label>i-Limit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>